# asimov-pastro

./: .gitignore  LICENSE  README.md  example.yaml  pyproject.toml
.github/workflows/: docs.yml
asimov_pastro/: __init__.py  __main__.py  calculator.py  cli.py  coherence.py  evidence.py  odds.py
docs/: conf.py  index.rst  installation.rst  methodology.rst  quickstart.rst  requirements.txt
docs/api/: calculator.rst  coherence.rst  pipeline.rst
tests/: test_pastro.py
