[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asimov-pastro"
version = "0.1.0"
description = "Asimov plugin for computing astrophysical probability (p_astro) of gravitational wave candidates"
authors = [{ name = "Daniel Williams", email = "daniel.williams@glasgow.ac.uk" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asimov>=0.5",
    "numpy>=1.20",
    "scipy>=1.7",
    "h5py>=3.0",
    "gwpy>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
]

[project.entry-points."asimov.pipelines"]
pastro = "asimov_pastro:Pastro"

[tool.setuptools]
packages = ["asimov_pastro"]
